--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,8 @@
   <li>Add a button which may only be clicked if the username is NOT an empty string</li>
   <li>Upon clicking the button, the username should be reset to an empty string</li>
 </ol>
+
+<hr>
+
+<label for="username">Enter the username</label>
+<p><input type="text" class="form-control"></p>
