--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,6 @@
 <hr>
 
 <label for="username">Enter the username</label>
-<p><input type="text" class="form-control"></p>
+<p><input type="text" class="form-control" [(ngModel)] = "username"></p>
+
+<button class="btn btn primary" (click) = "onCreateUsername()">Add username</button>
