2. Output the username property via String Interpolation (in a paragraph below the input)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,6 @@
 <label for="username">Enter the username</label>
 <p><input type="text" class="form-control" [(ngModel)] = "username"></p>
 
+<p>{{ username }}</p>
+
 <button class="btn btn primary" (click) = "onCreateUsername()">Add username</button>
