--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,5 @@
 <!-- string interpolation -->
 <p>{{ username }}</p>
 
-<!-- property binding -->
-<button class="btn btn primary" [disabled] = "isButtonDisabled()">Add username</button>
+<!-- [disabled] is a property binding - (click) is an event binding -->
+<button class="btn btn primary" [disabled] = "isButtonDisabled()" (click) = "onCreateUsername($event)">Add username</button>
