--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,4 @@
 <p>{{ username }}</p>
 
 <!-- [disabled] is a property binding - (click) is an event binding -->
-<button class="btn btn primary" [disabled] = "isButtonDisabled()" (click) = "onCreateUsername($event)">Add username</button>
+<button class="btn btn primary" [disabled] = "isButtonDisabled()" (click) = "onCreateUsername($event)">Reset username</button>
